--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -1,11 +1,11 @@
 imports:
     - { resource: config.yml }
 
-#doctrine:
-#    orm:
-#        metadata_cache_driver: apc
-#        result_cache_driver: apc
-#        query_cache_driver: apc
+doctrine:
+    dbal:
+      driver: pdo_pgsql
+      charset: UTF8
+      url: "%env(DATABASE_URL)%"
 
 monolog:
     handlers:
