--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -65,3 +65,13 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+
+fos_user:
+    db_driver:     orm                       # Le type de BDD à utiliser, nous utilisons l'ORM Doctrine depuis le début
+    firewall_name: main                      # Le nom du firewall derrière lequel on utilisera ces utilisateurs
+    user_class:    AppBundle\Entity\User     # La classe de l'entité User que nous utilisons
+    service:                               # this lines
+        mailer: fos_user.mailer.twig_swift # this lines
+    from_email:
+        address: "%mailer_user%"
+        sender_name: "%mailer_user%"
