--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/symfony": "3.4.*",
         "symfony/translation": "^3.4",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^1.0||^2.0",
+        "friendsofsymfony/user-bundle": "2.0.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
