--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -10,7 +10,7 @@ doctrine:
 monolog:
     handlers:
         main:
-            type: fingers_crossed
+            type: stream
             action_level: error
             handler: nested
         nested:
