--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -10,12 +10,13 @@ doctrine:
 monolog:
     handlers:
         main:
-            type: stream
+            type: fingers_crossed
             action_level: error
             handler: nested
         nested:
             type: stream
-            path: '%kernel.logs_dir%/%kernel.environment%.log'
+            #'%kernel.logs_dir%/%kernel.environment%.log'
+            path: "php://stderr"
             level: debug
         console:
             type: console
