--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,6 +7,8 @@ imports:
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: fr
+    images_directory: '%kernel.project_dir%/web/uploads/images'
+    url_path: 'http://localhost/blog-e-application'
 
 framework:
     #esi: ~
@@ -35,6 +37,8 @@ framework:
 twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+    globals:
+        uploaded_file_path: '%url_path%/web/uploads/images/'
 
 # Doctrine Configuration
 doctrine:
@@ -75,3 +79,6 @@ fos_user:
     from_email:
         address: "%mailer_user%"
         sender_name: "%mailer_user%"
+    profile:
+        form:
+            type: AppBundle\Form\ProfileEditType
