changement chemin  images

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -21,3 +21,6 @@ monolog:
         console:
             type: console
             process_psr_3_messages: false
+
+parameters:
+    url_path: 'http://damien-desousa-blog.herokuapp.com'
