--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -38,3 +38,6 @@ security:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
+        - { path: ^/post/create/, role: ROLE_USER }
+        - { path: ^/post/edit, role: ROLE_USER }
+        - { path: ^/post/delete, role: ROLE_USER }
